--- a/media/css/main.css
+++ b/media/css/main.css
@@ -107,6 +107,11 @@ h2 a {
 }
 
 /* line 95, ../scss/main.scss */
+h2, h3 {
+  font-weight: bold;
+}
+
+/* line 99, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
@@ -115,33 +120,33 @@ ul.pageNav {
   padding: 0;
   font-weight: bold;
 }
-/* line 103, ../scss/main.scss */
+/* line 107, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
   position: relative;
   left: 18px;
 }
-/* line 108, ../scss/main.scss */
+/* line 112, ../scss/main.scss */
 ul.pageNav.right li {
   padding: 0 0 0 0.5em;
 }
-/* line 113, ../scss/main.scss */
+/* line 117, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 118, ../scss/main.scss */
+/* line 122, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 122, ../scss/main.scss */
+/* line 126, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseBlue.png) repeat left center;
   text-decoration: none;
   color: #fff;
 }
-/* line 129, ../scss/main.scss */
+/* line 133, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -151,20 +156,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 135, ../scss/main.scss */
+/* line 139, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 138, ../scss/main.scss */
+/* line 142, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 142, ../scss/main.scss */
+/* line 146, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 187, ../scss/main.scss */
+/* line 191, ../scss/main.scss */
 .tag-reg, .tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
   color: #fff !important;
   text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
@@ -173,104 +178,104 @@ ul.pageNav li.curPage span {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   font-family: 'Helvetica Condensed Bold';
 }
-/* line 196, ../scss/main.scss */
+/* line 200, ../scss/main.scss */
 .tag-reg:hover, .tag-vip:hover, .tag-mod:hover, .tag-admin:hover, .tag-dev:hover, .tag-super:hover, .tag-owner:hover {
   text-decoration: none;
   outline: 2px solid #9c9c9c;
 }
 
-/* line 202, ../scss/main.scss */
+/* line 206, ../scss/main.scss */
 .tag-reg {
   background: #e8e8e8;
   text-shadow: 1px 1px 2px #000, 0 0 2px #000;
 }
 
-/* line 207, ../scss/main.scss */
+/* line 211, ../scss/main.scss */
 .tag-vip {
   background: #ffe762;
 }
-/* line 210, ../scss/main.scss */
+/* line 214, ../scss/main.scss */
 .tag-vip:hover {
   outline: 2px solid #c8a900;
 }
 
-/* line 215, ../scss/main.scss */
+/* line 219, ../scss/main.scss */
 .tag-mod {
   background: #bdf04f;
 }
-/* line 217, ../scss/main.scss */
+/* line 221, ../scss/main.scss */
 .tag-mod:hover {
   outline: 2px solid #6d990d;
 }
 
-/* line 222, ../scss/main.scss */
+/* line 226, ../scss/main.scss */
 .tag-admin {
   background: #ff6262;
 }
-/* line 224, ../scss/main.scss */
+/* line 228, ../scss/main.scss */
 .tag-admin:hover {
   outline: 2px solid #c80000;
 }
 
-/* line 229, ../scss/main.scss */
+/* line 233, ../scss/main.scss */
 .tag-dev {
   background: #7ad8ff;
 }
-/* line 231, ../scss/main.scss */
+/* line 235, ../scss/main.scss */
 .tag-dev:hover {
   outline: 2px solid #009ee0;
 }
 
-/* line 236, ../scss/main.scss */
+/* line 240, ../scss/main.scss */
 .tag-super {
   background: #ba83ff;
 }
-/* line 238, ../scss/main.scss */
+/* line 242, ../scss/main.scss */
 .tag-super:hover {
   outline: 2px solid #6700e9;
 }
 
-/* line 243, ../scss/main.scss */
+/* line 247, ../scss/main.scss */
 .tag-owner {
   background: #5e5e5e;
 }
-/* line 245, ../scss/main.scss */
+/* line 249, ../scss/main.scss */
 .tag-owner:hover {
   outline: 2px solid #121212;
 }
 
-/* line 250, ../scss/main.scss */
+/* line 254, ../scss/main.scss */
 .rankTag {
   padding: 0 0.5em;
 }
-/* line 253, ../scss/main.scss */
+/* line 257, ../scss/main.scss */
 .rankTag:hover {
   outline: 0;
 }
-/* line 257, ../scss/main.scss */
+/* line 261, ../scss/main.scss */
 .rankTag.shortName {
   text-transform: uppercase;
 }
 
-/* line 262, ../scss/main.scss */
+/* line 266, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 268, ../scss/main.scss */
+/* line 272, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 273, ../scss/main.scss */
+/* line 277, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 277, ../scss/main.scss */
+/* line 281, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -282,7 +287,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 291, ../scss/main.scss */
+/* line 295, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.8em;
   border: 1px solid #d8d8d8;
@@ -298,26 +303,26 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noiseWhite.png) repeat left center;
 }
-/* line 305, ../scss/main.scss */
+/* line 309, ../scss/main.scss */
 #chatbox .chat ~ .chat {
   margin-top: 0.25em;
 }
-/* line 309, ../scss/main.scss */
+/* line 313, ../scss/main.scss */
 #chatbox .chat a.userLink {
   display: inline-block;
   font-family: Helvetica, serif;
   font-weight: bold;
   font-size: 0.8em;
 }
-/* line 326, ../scss/main.scss */
+/* line 330, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 330, ../scss/main.scss */
+/* line 334, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 334, ../scss/main.scss */
+/* line 338, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -332,7 +337,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 344, ../scss/main.scss */
+/* line 348, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -342,22 +347,22 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 353, ../scss/main.scss */
+/* line 357, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 358, ../scss/main.scss */
+/* line 362, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 362, ../scss/main.scss */
+/* line 366, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 367, ../scss/main.scss */
+/* line 371, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -365,7 +370,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 374, ../scss/main.scss */
+/* line 378, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -373,22 +378,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 383, ../scss/main.scss */
+/* line 387, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseBlue.png) repeat left center;
   z-index: 1000;
 }
 
-/* line 390, ../scss/main.scss */
+/* line 394, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 394, ../scss/main.scss */
+/* line 398, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 415, ../scss/main.scss */
+/* line 419, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -401,7 +406,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 429, ../scss/main.scss */
+/* line 433, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -410,12 +415,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseBlack.png) repeat left center;
   line-height: 32px;
 }
-/* line 437, ../scss/main.scss */
+/* line 441, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseBlue.png) repeat left center;
   text-decoration: none;
 }
-/* line 443, ../scss/main.scss */
+/* line 447, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -423,19 +428,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 453, ../scss/main.scss */
+/* line 457, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 462, ../scss/main.scss */
+  /* line 466, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 465, ../scss/main.scss */
+  /* line 469, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -443,13 +448,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 462, ../scss/main.scss */
+  /* line 466, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 465, ../scss/main.scss */
+  /* line 469, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -457,13 +462,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 462, ../scss/main.scss */
+  /* line 466, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 465, ../scss/main.scss */
+  /* line 469, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -471,13 +476,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 462, ../scss/main.scss */
+  /* line 466, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 465, ../scss/main.scss */
+  /* line 469, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -485,18 +490,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 462, ../scss/main.scss */
+  /* line 466, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 465, ../scss/main.scss */
+  /* line 469, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 470, ../scss/main.scss */
+/* line 474, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -509,7 +514,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 482, ../scss/main.scss */
+/* line 486, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -521,34 +526,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 493, ../scss/main.scss */
+/* line 497, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 496, ../scss/main.scss */
+/* line 500, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 503, ../scss/main.scss */
+/* line 507, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 511, ../scss/main.scss */
+/* line 515, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 517, ../scss/main.scss */
+/* line 521, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 521, ../scss/main.scss */
+/* line 525, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -559,7 +564,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 531, ../scss/main.scss */
+/* line 535, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -569,7 +574,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 538, ../scss/main.scss */
+/* line 542, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -582,7 +587,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 543, ../scss/main.scss */
+/* line 547, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -595,7 +600,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 548, ../scss/main.scss */
+/* line 552, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -610,7 +615,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 555, ../scss/main.scss */
+/* line 559, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #e0e0e0;
@@ -623,29 +628,29 @@ input[type="submit"]:focus, button:focus {
   margin: 2px 0 0 0;
 }
 
-/* line 561, ../scss/main.scss */
+/* line 565, ../scss/main.scss */
 .admin-form {
   display: block;
   clear: both;
 }
-/* line 565, ../scss/main.scss */
+/* line 569, ../scss/main.scss */
 .admin-form input {
   display: block;
 }
 
-/* line 580, ../scss/main.scss */
+/* line 584, ../scss/main.scss */
 .form-labels {
   width: 320px;
   float: left;
   margin: 20px 0;
 }
-/* line 585, ../scss/main.scss */
+/* line 589, ../scss/main.scss */
 .form-labels > div {
   position: relative;
   overflow: hidden;
   margin: 1em 0;
 }
-/* line 592, ../scss/main.scss */
+/* line 596, ../scss/main.scss */
 .form-labels .labels input, .form-labels .labels textarea {
   width: 100%;
   border-style: solid;
@@ -664,7 +669,7 @@ input[type="submit"]:focus, button:focus {
   padding: 12px;
   outline: 0;
 }
-/* line 603, ../scss/main.scss */
+/* line 607, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
   border-style: solid;
   border-color: #e0e0e0;
@@ -676,7 +681,7 @@ input[type="submit"]:focus, button:focus {
   border-width: 2px 2px 2px 2px;
   padding: 4px 6px 20px 6px;
 }
-/* line 608, ../scss/main.scss */
+/* line 612, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
   color: white;
@@ -687,7 +692,7 @@ input[type="submit"]:focus, button:focus {
   top: 100%;
   margin-top: -16px;
 }
-/* line 619, ../scss/main.scss */
+/* line 623, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels textarea:focus {
   border-style: solid;
   -moz-border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
@@ -697,11 +702,11 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
   border-width: 2px 2px 2px 2px;
 }
-/* line 623, ../scss/main.scss */
+/* line 627, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
   background: url(../images/noiseBlue.png) repeat left center;
 }
-/* line 628, ../scss/main.scss */
+/* line 632, ../scss/main.scss */
 .form-labels .labels label {
   transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
   position: absolute;
@@ -713,7 +718,7 @@ input[type="submit"]:focus, button:focus {
   left: 0;
   width: 100%;
 }
-/* line 639, ../scss/main.scss */
+/* line 643, ../scss/main.scss */
 .form-labels .labels textarea {
   display: block;
   resize: vertical;
