--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -347,12 +347,12 @@ table.threads {
 }
 
 .onlineUsers {
-  @include noise("White");
-  padding: 1em;
+  //@include noise("White");
+  padding: 1em 0 0 0;
 
-  h3 {
-    margin: 0 0 0.5em 0;
-  }
+  //h4 {
+  //  margin: 0 0 0.5em 0;
+  //}
 
   .userLink {
     display: inline-block;
