-fixed bbcode crashing on long text sometimes -improved quotes so you username and postId are optional

--- a/media/css/threads.css
+++ b/media/css/threads.css
@@ -211,7 +211,7 @@ h2.threadTitle.closed:after {
   position: absolute;
 }
 /* line 231, ../scss/threads.scss */
-.postContent blockquote a.postLink {
+.postContent blockquote .postLink {
   font-size: 0.9em;
   margin: 0 0 10px -16px;
   display: inline-block;
