--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -228,7 +228,7 @@ h2.threadTitle {
       position: absolute;
     }
 
-    a.postLink {
+    .postLink {
       font-size: 0.9em;
       margin: 0 0 10px -16px;
       display: inline-block;
