--- a/media/scss/loading.scss
+++ b/media/scss/loading.scss
@@ -162,7 +162,7 @@ $owner: #5e5e5e;
   display: inline-block;
 }
 
-.loading-message {
+#loading-message {
   color: $blue;
   font-style: italic;
 }
