made seen posts a different color

--- a/media/css/threads.css
+++ b/media/css/threads.css
@@ -68,6 +68,10 @@ h2.threadTitle.closed:after {
   border-width: 0px 0px 0px 5px;
 }
 /* line 43, ../scss/threads.scss */
+.post.seenPost {
+  background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
+}
+/* line 47, ../scss/threads.scss */
 .post.myPost {
   border-style: solid;
   -moz-border-image: url(../images/noiseBlue.png) 0 0 0 5 repeat repeat;
@@ -77,7 +81,7 @@ h2.threadTitle.closed:after {
   border-image: url(../images/noiseBlue.png) 0 0 0 5 repeat repeat;
   border-width: 0px 0px 0px 5px;
 }
-/* line 71, ../scss/threads.scss */
+/* line 75, ../scss/threads.scss */
 .post:before {
   content: '';
   display: block;
@@ -88,7 +92,7 @@ h2.threadTitle.closed:after {
   top: 0;
 }
 
-/* line 82, ../scss/threads.scss */
+/* line 86, ../scss/threads.scss */
 .editLink, .quoteLink, .modDropdown {
   width: 32px;
   height: 32px;
@@ -96,7 +100,7 @@ h2.threadTitle.closed:after {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 89, ../scss/threads.scss */
+/* line 93, ../scss/threads.scss */
 .postOptions {
   position: absolute;
   top: 36px;
@@ -104,71 +108,71 @@ h2.threadTitle.closed:after {
   line-height: 1;
   width: 32px;
 }
-/* line 114, ../scss/threads.scss */
+/* line 118, ../scss/threads.scss */
 .postOptions > a, .postOptions > .modDropdown {
   margin: 0 0 8px 0;
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 118, ../scss/threads.scss */
+/* line 122, ../scss/threads.scss */
 .postOptions > a:hover, .postOptions > .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 122, ../scss/threads.scss */
+/* line 126, ../scss/threads.scss */
 .postOptions > a:active, .postOptions > .modDropdown:active {
   background: url(../images/noiseBlue.png) repeat left center;
 }
 
-/* line 128, ../scss/threads.scss */
+/* line 132, ../scss/threads.scss */
 .postOptions {
   opacity: 0.25;
 }
 
-/* line 132, ../scss/threads.scss */
+/* line 136, ../scss/threads.scss */
 .post:hover .postOptions, .postOptions.active {
   opacity: 1;
 }
 
-/* line 136, ../scss/threads.scss */
+/* line 140, ../scss/threads.scss */
 .postContent.expanded + .postOptions {
   display: none;
 }
 
-/* line 140, ../scss/threads.scss */
+/* line 144, ../scss/threads.scss */
 .userInfo {
   width: 192px;
   display: inline-block;
   padding: 0 32px;
   text-align: right;
 }
-/* line 161, ../scss/threads.scss */
+/* line 165, ../scss/threads.scss */
 .userInfo .avatar {
   width: 128px;
   height: 128px;
   border: 2px solid #d1d1d1;
   display: inline-block;
 }
-/* line 168, ../scss/threads.scss */
+/* line 172, ../scss/threads.scss */
 .userInfo a.userLink {
   color: #404346;
   font-weight: bold;
   display: block;
 }
-/* line 174, ../scss/threads.scss */
+/* line 178, ../scss/threads.scss */
 .userInfo .postCount {
   display: block;
 }
-/* line 178, ../scss/threads.scss */
+/* line 182, ../scss/threads.scss */
 .userInfo .rankTag {
   display: block;
 }
-/* line 182, ../scss/threads.scss */
+/* line 186, ../scss/threads.scss */
 .userInfo .ip, .userInfo .steamId {
   display: block;
   color: #afafaf;
   font-size: 0.75em;
 }
 
-/* line 189, ../scss/threads.scss */
+/* line 193, ../scss/threads.scss */
 .postContent {
   display: inline-block;
   width: 645px;
@@ -187,7 +191,7 @@ h2.threadTitle.closed:after {
   white-space: -hp-pre-wrap;
   word-wrap: break-word;
 }
-/* line 208, ../scss/threads.scss */
+/* line 212, ../scss/threads.scss */
 .postContent blockquote {
   padding: 7px 23px;
   border: 1px solid #ddd;
@@ -196,31 +200,31 @@ h2.threadTitle.closed:after {
   margin: 0;
   position: relative;
 }
-/* line 217, ../scss/threads.scss */
+/* line 221, ../scss/threads.scss */
 .postContent blockquote::before {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAKBAMAAAByAqLJAAAALVBMVEWvr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr69hrK0dAAAADnRSTlMARLuZEcwid1Xdqogz7if2De8AAABGSURBVHhebcWxCYAwEEDRT4RD4g7BEbKDfUiVccQhUjuSuMIV4cDiZtABrB5smbkhZ2c3poH4QVGWB66baJAqQT98Da6/vNnzF8PiKPQPAAAAAElFTkSuQmCC");
   left: 7px;
   top: 22px;
   position: absolute;
 }
-/* line 224, ../scss/threads.scss */
+/* line 228, ../scss/threads.scss */
 .postContent blockquote:after {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAKBAMAAAByAqLJAAAALVBMVEWvr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr69hrK0dAAAADnRSTlMAdzPuiKrMZrtVEd0iRAGl5MMAAABHSURBVHhebcVBEYAgEEDR74yLF2eHBERgSEAEMxDBDFSxgFGIgDe9bAYI4Omh1hd7/kE76yQmZBIK18eeT46b+CLWcJ6tMgAEjxkCJlUqgwAAAABJRU5ErkJggg==");
   bottom: 10px;
   right: 6px;
   position: absolute;
 }
-/* line 231, ../scss/threads.scss */
+/* line 235, ../scss/threads.scss */
 .postContent blockquote .postLink {
   font-size: 0.9em;
   margin: 0 0 10px -16px;
   display: inline-block;
 }
-/* line 238, ../scss/threads.scss */
+/* line 242, ../scss/threads.scss */
 .postContent img {
   max-width: 100%;
 }
-/* line 242, ../scss/threads.scss */
+/* line 246, ../scss/threads.scss */
 .postContent .editInfo {
   position: absolute;
   bottom: 0px;
@@ -229,7 +233,7 @@ h2.threadTitle.closed:after {
   font-style: italic;
   color: #999;
 }
-/* line 251, ../scss/threads.scss */
+/* line 255, ../scss/threads.scss */
 .postContent .postTime {
   font-size: 0.75em;
   color: #676565;
