--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -181,13 +181,13 @@ ul.pageNav {
   //}
 }
 
-$reg: #e8e8e8;
-$vip: #ffe762;
+$reg: #5e5e5e;
+$vip: #ffe555;
 $mod: #bdf04f;
-$admin: #ff6262;
-$dev: #7ad8ff;
-$super: #ba83ff;
-$owner: #5e5e5e;
+$admin: #ff5555;
+$dev: #45c0ff;
+$super: #b156ff;
+$owner: #3c3c3c;
 
 .tag-reg, .tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
   color: #fff !important;
